{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "c8ae97bb-6358-43ac-aaf4-bfd62aa725e9",
            "actions": [
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "9012d2ab-3304-46b2-992c-53a40579b0d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "2fc87e6a-c27e-4690-ba06-e172318094f1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "9dbfb219-3962-4ee2-be83-e98c11f59707",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriangleButton",
                    "type": "Button",
                    "id": "e5d65af5-38a8-4e40-b84a-72c8e12efe96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitJoystickButton",
                    "type": "Button",
                    "id": "4d496fe4-31f5-4e4f-acd7-e295ed7a5fad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "51cc667a-98d8-46b6-8a86-ea0aa3e3c58e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4448aca2-140d-4786-a32b-559d764685a8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6403898a-4427-4051-84d2-6be3249ec3a0",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a02c5e6b-eed2-43d3-b38b-be78ce8a2f2c",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriangleButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "662ea8eb-9f33-49a0-9dc4-3bc11b257885",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitJoystickButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}